[tool.poetry]
name = "klak"
version = "0.4.3"
description = "Klak provides the ergonoics of a project Makefile with the ease of Python and power of Click."
authors = ["Aubrey Taylor <aubricus+klak@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/aubricus/klak"
documentation = "https://github.com/aubricus/klak"
repository = "https://github.com/aubricus/klak"
license = "MIT"
keywords = ["klak", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
pytest = "^4.6"
pytest-runner = "^5.1"
Sphinx = "^2.1"
mypy = "^0.701.0"
pdbpp = "^0.10.0"
tox = "^3.12"
black = {version = "^19.3b0", python = "^3.6"}
tox-travis = "^0.12.0"

[tool.poetry.scripts]
klak = "klak.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
